# flate2-rb

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  README.md  Rakefile  flate2.gemspec
.github/workflows/: main.yml
bench/: zlib_gunzip.rb  zlib_gzip.rb
ext/flate2/: Cargo.toml  extconf.rb
ext/flate2/src/: lib.rs  nogvl.rs  rstring_writer.rs
lib/: flate2.rb
lib/flate2/: version.rb
sig/: flate2.rbs
test/: test_flate2.rb  test_helper.rb
