[package]
name = "flate2"
version = "0.1.0"
edition = "2021"
authors = ["Ian Ker-Seymer <ian.kerseymer@shopify.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2_rs = { package = "flate2", version = "1.0.28" }
magnus = { version = "0.6.2", features = ["rb-sys"] }
rb-sys = { version = "*", features = ["stable-api-compiled-fallback"] }
